--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,13 @@
   <groupId>com.plateer</groupId>
   <artifactId>shoppingmall_cart_wishlist</artifactId>
   <version>1.0-SNAPSHOT</version>
+
   <modules>
     <module>shoppingmall_cart_wishlist_boot</module>
+    <module>shoppingmall_cart_wishlist_rest</module>
+    <module>shoppingmall_cart_wishlist_domain</module>
   </modules>
+
   <packaging>pom</packaging>
 
 </project>
