--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.plateer</groupId>
@@ -12,6 +10,10 @@
     <module>shoppingmall_cart_wishlist_boot</module>
     <module>shoppingmall_cart_wishlist_rest</module>
     <module>shoppingmall_cart_wishlist_domain</module>
+    <module>shoppingmall_cart_wishlist-service</module>
+    <module>shoppingmall_cart_wishlist-store</module>
+    <module>shoppingmall_cart_wishlist_service</module>
+    <module>shoppingmall_cart_wishlist_store</module>
   </modules>
 
   <packaging>pom</packaging>
