--- a/shoppingmall_cart_wishlist_boot/pom.xml
+++ b/shoppingmall_cart_wishlist_boot/pom.xml
@@ -91,6 +91,13 @@
             <artifactId>shoppingmall_cart_wishlist_rest</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-dbcp2</artifactId>
+		    <version>2.7.0</version>
+		</dependency>
+		        
     </dependencies>
 
     <build>
